--- a/src/main/resources/templates/find/changePassword.html
+++ b/src/main/resources/templates/find/changePassword.html
@@ -25,7 +25,7 @@
                 
                 <p>
                     비밀번호를 변경해 주세요.<br>
-                    영문, 숫자, 특수문자를 사용하여 8자 이상 입력해 주세요.                    
+                    영문, 숫자, 특수문자를 사용하여 8자 이상 입력해 주세요..
                 </p>
 
                 <div>
