--- a/src/main/resources/templates/user/_tail.html
+++ b/src/main/resources/templates/user/_tail.html
@@ -1,7 +1,7 @@
-        <footer>
-            <p class="copyright">ⓒCopyright chhak.or.kr</p>
-            <p class="version">sboard - SNAPSHOT 0.0.1</p>
-        </footer>
-    </div>    
+    <footer>
+        <p class="copyright">ⓒCopyright chhak0503@gmail.com</p>
+        <p class="version">[[${appInfo.appName}]] ver.[[${appInfo.appVersion}]]</p>
+    </footer>
+    </div>
 </body>
 </html>
