--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -1,4 +1,4 @@
-<th:block th:include="~{/user/_head.html}"></th:block>
+<div th:replace="~{/user/_head.html}"></div>
         <main id="user">
             <section class="info">
                 <form action="#" method="post">
@@ -89,4 +89,4 @@
                 </form>
             </section>
         </main>
-<th:block th:include="~{/user/_tail.html}"></th:block>
+<div th:replace="~{/user/_tail.html}"></div>
