--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -4,7 +4,7 @@
         <nav>
             <h1>
                 전체 글목록
-                <span>1012건</span>
+                <span>[[${pageResponseDTO.total}]]건</span>
             </h1>
             <form th:action="@{/article/search}" method="get">
                 <select name="searchType">
